[tool.poetry]
name = "cfets"
version = "0.1.0"
description = "Python interface for China Foreign Exchange Trade System (CFETS) API"
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = "^2.2.0"
requests = "*"
#numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

